2007-09-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_rss.tcl: Avoid recreating the rss label if present.

2007-09-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Moved the emoticon init to post login dialog as
	http proxy configuration occurs here.
	Some bug fixes and typos in the new whiteboard code resolved.

2007-09-13  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Moved the emoticons to the web and added code for
	downloading and caching them in .tkchatrc. Downloading new and
	changed emoticons is automatically done at startup and can be
	manually triggered at runtime from the Emoticons menu.

	Use new-tab instead of new-page for sending URLs to the browser,
	as it seems that new-page is undocumented and newer releases of
	Firefox don't accept it anymore.
	
2007-09-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:  Extracted whiteboard code to a separate file
	* tkchat_whiteboard.tcl: Whiteboard is now created as safeTk
	windows to evade issues identified by Zarutian in event handling

2007-09-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* mousewheel.tcl:  Added tip 171 mouse wheel handling suggestion
	* tkchat.tcl:      Check the statusbar exists before using it.
	* tkchat_rss.tcl:  Added requirement for the uri package.
	                   Fixed Dutch message typo.
	                   Fixed typo rss dialog (focus, not raise)
	                   RSS active tag was excessive - just the title

2007-09-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Use native scrollbars on Aqua and avoid ttk ones. 

2007-09-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:          Added support for checking RSS/ATOM feeds
	* tkchat_rss.tcl:      with understated notification in the status
	* rssrdr/rssrdr.tcl:   bar when something new arrives.
	* rssrdr/pkgIndex.tcl:

2007-09-02  Pat Thoyts  <patthoyts@users.sourceforge.net>
